# lama

./: .gitignore  Cargo.toml  LICENSE  README.md  check  test.hoa
.github/: dependabot.yml
.github/workflows/: rust.yml
automata/: Cargo.toml
automata-learning/: Cargo.toml
automata-learning/benches/: active_learning.rs  forc_inference.rs  iai.rs
automata-learning/src/: forcs.rs  lib.rs  prefixtree.rs  priority_mapping.rs  sample.rs
automata-learning/src/acceptance/: mod.rs
automata-learning/src/active/: logging.rs  lstar.rs  mealy.rs  mod.rs  oracle.rs  table.rs  teacher.rs
automata-learning/src/glerc/: constraint.rs  info.rs  mod.rs  provider.rs  state.rs
automata-learning/src/glerc/constraint/: acceptance.rs  mod.rs  myhillnerode.rs  separability.rs
automata-learning/src/passive/: consistency.rs  fwpm.rs  mod.rs  precise.rs  sample.rs  sprout.rs
automata-learning/src/passive/sample/: canonic_coloring.rs  characterize.rs  mod.rs  omega.rs  split.rs
automata/benches/: iai.rs  ts.rs
automata/src/: acceptance.rs  acceptor.rs  alphabet.rs  automata.rs  automaton.rs  boundedness.rs  coloring.rs  combined.rs  congruence.rs  congurence.rs  display.rs  hoa.rs  length.rs  lib.rs  mapping.rs  priority_mapping.rs  random.rs  with_acceptance.rs
automata/src/acceptance/: acceptor.rs  mod.rs  omega.rs  reachability.rs
automata/src/algorithms/: mod.rs  partition_refinement.rs
automata/src/automata/: acceptor.rs  dba.rs  dfa.rs  dpa.rs  mealy.rs  mod.rs  moore.rs  omega.rs  with_initial.rs
automata/src/automaton/: acceptance_type.rs  acceptor.rs  dba.rs  dfa.rs  dpa.rs  mealy.rs  mod.rs  moore.rs  omega.rs  semantics.rs  with_initial.rs
automata/src/congruence/: cayley.rs  class.rs  forc.rs  mod.rs  priority_mapping.rs  transitionprofile.rs
automata/src/convert/: dot.rs  fmt.rs  hoa.rs  mod.rs
automata/src/hoa/: input.rs  mod.rs  output.rs
automata/src/old/: congruence.rs  lib.rs
automata/src/old/acceptance/: mod.rs
automata/src/old/operations/: chain.rs  mod.rs  negation.rs  union.rs
automata/src/old/output/: mapping.rs
automata/src/old/ts/: mod.rs  restricted.rs  transitionsystem.rs
automata/src/old/ts/visit/: mod.rs  paths.rs
automata/src/old/words/: infinite.rs  prepend.rs
automata/src/operations/: chain.rs  emptiness.rs  intersection.rs  mapping.rs  mod.rs  negation.rs  product.rs  trimming.rs  union.rs
automata/src/output/: mapping.rs  mod.rs  transducer.rs  with_output.rs
automata/src/run/: configuration.rs  escape_prefix.rs  evaluate.rs  induced_path.rs  mod.rs  output.rs  partial_run.rs  result.rs  run.rs  run_result.rs  runner.rs  take_transition.rs  walker.rs
automata/src/ts/: builder.rs  dag.rs  deterministic.rs  dot.rs  dts.rs  edge.rs  has_states.rs  implementations.rs  index.rs  index_ts.rs  induces.rs  initial.rs  initialized.rs  labels.rs  mod.rs  nondeterministic.rs  nts.rs  operations.rs  path.rs  predecessors.rs  product.rs  quotient.rs  reachable.rs  restricted.rs  sccs.rs  shrinkable.rs  sproutable.rs  state.rs  state_index.rs  successor.rs  temporary.rs  transition.rs  transition_system.rs  transitionsystem.rs
automata/src/ts/connected_components/: mod.rs  scc.rs  tarjan.rs  tarjan_dag.rs
automata/src/ts/operations/: map.rs  mod.rs  product.rs  restricted.rs  reverse.rs  subset.rs
automata/src/ts/run/: mod.rs  partial.rs  successful.rs  walker.rs
automata/src/ts/successor/: mod.rs  partial.rs  reachable.rs  restricted.rs  sccs.rs  successful.rs  walker.rs
automata/src/ts/transition_system/: mod.rs  restricted.rs  sccs.rs  walker.rs
automata/src/ts/visit/: bfs.rs  dfs.rs  mod.rs  paths.rs  tarjan.rs
automata/src/word/: concat.rs  finite.rs  induces.rs  mod.rs  normalized.rs  omega.rs  representable.rs  subword.rs
automata/src/words/: append.rs  finite.rs  infinite.rs  mod.rs  prepend.rs  represent.rs  subword.rs
bak.bin/: main.rs
bak.bin/cli/: mod.rs
hoa/: one.hoa  onethousand.hoa
hoars/: Cargo.toml  README.md
hoars/src/: body.rs  display.rs  format.rs  header.rs  input.rs  interpretation.rs  label_expression.rs  lexer.rs  lib.rs  output.rs  value.rs
lama-web/: Cargo.toml  Dioxus.toml  index.html
lama-web/src/: app.rs
samples/: inf_aba.smpl  inf_double_a.smpl  large.smpl  paper.smpl
src/: acceptor.rs  lib.rs  with_acceptance.rs
src/acceptance/: mod.rs
src/run/: mod.rs  result.rs  walker.rs
src/ts/: deterministic.rs  mod.rs
src/words/: finite.rs  mod.rs  prepend.rs
xtask/: Cargo.toml
xtask/src/: main.rs
yewma/: test.gv
yewma/src/: main.rs
