[package]
name = "automata"
version = "0.1.0"
edition = "2021"
description = "An implementation of finite automata and learning algorithm"

[dependencies]
ahash = {version = "0.8.3", optional = true}

[features]
default = ["det", "ahash"]
det = []
ahash = ["dep:ahash"]

[[bin]]
name = "lama"
path = "bin/main.rs"
test = false
doctest = false
