[package]
name = "automata-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
automata = { version = "0.2", path = "../automata", features = ["graphviz"] }
itertools = "0.12"
impl-tools = "0.10.0"
tabled = { version = "0.14.0", features = ["color"] }
owo-colors = "3.5"
alea = "0.2"
either = "1.9.0"
paste = "1.0"
fixedbitset = "0.4.2"
test-log = { version = "0.2.14", features = ["trace"] }
bimap = "0.6.3"
ouroboros = "0.18.1"

# ouroboros = "0.18.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }
iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }

[[bench]]
name = "forc_inference"
harness = false

[[bench]]
name = "active_learning"
harness = false

[[bench]]
name = "iai"
harness = false
