[package]
name = "automata-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
automata = { git = "https://github.com/leonbohn/automata", rev = "7264bb8"}
itertools = "0.12"
impl-tools = "0.10.0"
tabled = { version = "0.15.0", features = ["ansi"] }
owo-colors = "4.0.0"
alea = "0.2"
either = "1.9.0"
paste = "1.0"
fixedbitset = "0.5.0"
test-log = { version = "0.2.14", features = ["trace"] }
bimap = "0.6.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }

# [[bench]]
# name = "forc_inference"
# harness = false

[[bench]]
name = "active_learning"
harness = false

[[bench]]
name = "iai"
harness = false
