[package]
name = "automata"
version = "0.2.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
fxhash = "0.2"
itertools = "0.11"
tabled = { version = "0.14.0", features = ["color"] }
owo-colors = "3.5"
hoars = { version = "0.1", path = "../hoars", optional = true }
tracing-test = "0.2"
tempfile = { version = "3.8.0", optional = true }
impl-tools = "0.9"

[features]
default = ["det", "hoa", "graphviz"]
det = []
hoa = ["dep:hoars"]
graphviz = ["dep:tempfile"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "ts"
harness = false
