[package]
name = "automata"
version = "0.2.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
fxhash = "0.2"
itertools = "0.11"
tabled = { version = "0.14.0", features = ["color"] }
owo-colors = "3.5"
hoars = { version = "0.1", path = "../hoars", optional = true }
tracing-test = "0.2"
tempfile = { version = "3.8.0", optional = true }
impl-tools = "0.10"

[features]
default = ["det", "hoa", "graphviz"]
det = []
hoa = ["dep:hoars"]
graphviz = ["dep:tempfile"]

[dev-dependencies]
lazy_static = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }

[[bench]]
name = "ts"
harness = false

[[bench]]
name = "iai"
harness = false
