[package]
name = "automata"
version = "0.2.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
fxhash = "0.2"
itertools = "0.12"
tabled = { version = "0.15.0", features = ["ansi"] }
owo-colors = "4.0.0"
hoars = { version = "0.1", path = "../hoars", optional = true }
test-log = { version = "0.2.14", features = ["trace"] }
tempfile = { version = "3.9.0", optional = true }
impl-tools = "0.10"
paste = "1.0.14"
biodivine-lib-bdd = { version = "0.5", optional = true }
bit-set = "0.5.3"
bimap = "0.6.3"
fastrand = "2"
# fork = { version = "0.1", optional = true }
# show-image = { version = "0.13", optional = true }

[features]
default = ["det", "hoa", "graphviz", "random"]
det = []
random = []
hoa = ["dep:hoars", "biodivine-lib-bdd"]
graphviz = ["dep:tempfile"]

[dev-dependencies]
lazy_static = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
# iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }

[[bench]]
name = "ts"
harness = false
