[package]
name = "hoars"
license = "GPL-3.0-or-later"
description = "A library for dealing with the HOA (Hanoi Omega Automata) file format."
homepage = "https://github.com/leonbohn/hoars/"
repository = "https://github.com/leonbohn/hoars/"
readme = "README.md"
keywords = ["omega-automata", "hoa", "automata"]
categories = ["encoding", "parser-implementations"]
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
chumsky = "0.9.0"
itertools = "0.10.5"
