[package]
name = "hoars"
license = "MIT"
description = "A library for dealing with the HOA (Hanoi Omega Automata) file format."
homepage = "https://github.com/leonbohn/lama/"
repository = "https://github.com/leonbohn/lama/tree/main/hoars"
readme = "README.md"
keywords = ["omega-automata", "hoa", "automata"]
categories = ["encoding", "parser-implementations"]
version = "0.1.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
ariadne = "0.3.0"
chumsky = { version = "0.9", default-features = false, features = [
    "ahash",
    "std",
] }
itertools = "0.12.0"
biodivine-lib-bdd = "0.5"
lazy_static = "1.4.0"
