[package]
name = "lama-web"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'

[dependencies]
yew = { version = "0.20", features = ["csr"] }
automata = { version = "0.1", path = "../automata", default-features = false, features = ["det", "ahash", "graphviz"] }
automata-learning = { version = "0.1", path = "../automata-learning" }
getrandom = { version = "0.2", features = ["js"] }